--- a/templates/picklepagestemplates/about.html
+++ b/templates/picklepagestemplates/about.html
@@ -1,4 +1,15 @@
 {% extends 'base.html' %}
+{% load static %}
 {% block content %}
-<h1>Hello About</h1>
-{% endblock%}
+<div><center>
+<h1>History</h1>
+<p>In 1965, two dads named Joel Pritchard and Bill Bell arrived at Pritchard’s home on Bainbridge Island, Washington, after a golf outing. They found that their families were bored with no way to pass the time. Looking to alleviate the boredom of his loved ones and close friends, Pritchard started to hatch a plan to bring an end to the group’s summer time woes. Pritchard’s property had an old badminton court so they started there with hopes of playing. However, they couldn’t find enough rackets for a full game so instead, he improvised by using spare ping pong paddles and a wiffle ball. With these bits and pieces lying around, a brand-new game was born.</p>
+<br><br>
+<h1>Our Mission</h1>
+<p>Prevent kidney and urinary tract diseases, improve 
+    the health and well-being of individuals and 
+    families affected by these diseases, and increase 
+    the availability of all organs for transplantation.</p>
+</center>
+</div>
+{% endblock %}
