--- a/templates/picklepagestemplates/about.html
+++ b/templates/picklepagestemplates/about.html
@@ -6,10 +6,22 @@
 <p>In 1965, two dads named Joel Pritchard and Bill Bell arrived at Pritchard’s home on Bainbridge Island, Washington, after a golf outing. They found that their families were bored with no way to pass the time. Looking to alleviate the boredom of his loved ones and close friends, Pritchard started to hatch a plan to bring an end to the group’s summer time woes. Pritchard’s property had an old badminton court so they started there with hopes of playing. However, they couldn’t find enough rackets for a full game so instead, he improvised by using spare ping pong paddles and a wiffle ball. With these bits and pieces lying around, a brand-new game was born.</p>
 <br><br>
 <h1>Rules</h1>
-<p>Prevent kidney and urinary tract diseases, improve 
-    the health and well-being of individuals and 
-    families affected by these diseases, and increase 
-    the availability of all organs for transplantation.</p>
+<h2>General Rules</h2>
+  <p>Pickleball is a paddle sport played on a badminton-sized court with a slightly modified tennis net. The game is played with a ball similar to a whiffle ball and paddles similar to those used in ping-pong.</p>
+  <p>The rules of pickleball are similar to those of tennis, but there are some key differences. For example, players are not allowed to volley the ball (i.e. hit it before it bounces) in the non-volley zone (the area within 7 feet of the net), and the serve must be underhand and hit diagonally to the other side of the court.</p>
+
+  <h2>Scoring</h2>
+  <p>In pickleball, points are scored only by the serving team. The first team to score 11 points wins, as long as they have a lead of at least two points. If the score reaches 10-10, the game continues until one team has a two-point lead.</p>
+
+  <h2>Doubles vs. Singles</h2>
+  <p>Pickleball can be played with either two players on each team (doubles) or one player on each team (singles). The rules are the same for both doubles and singles, but the positioning and strategy can be different.</p>
+
+  <h2>Faults and Penalties</h2>
+  <p>Pickleball has several rules that can result in a fault or penalty. For example, if a player hits the ball out of bounds, hits the ball before it has a chance to bounce, or hits the ball into the non-volley zone before it has bounced, their team will lose the point. In addition, if a player hinders their opponent's ability to make a fair return, they may be called for a hindrance and their team will lose the point.</p>
+  <p>It is important for players to be aware of the rules of pickleball and avoid committing faults and penalties. This will ensure that the game is fair and fun for everyone.</p>
+</body>
+</html>
+
 </center>
 </div>
 {% endblock %}
